# marketplace-smart-contracts_NEAR

./: .env.example  .gitignore  README.md  package.json
.dependabot/: config.yml
contracts/market/: Cargo.toml  build-mainnet.sh  build-testnet.sh  build.sh
contracts/market/neardev/: dev-account  dev-account.env
contracts/market/src/: external.rs  internal.rs  lib.rs  nft_callbacks.rs  sale.rs
contracts/nft/: Cargo.toml  build-mainnet.sh  build-testnet.sh  build.sh
contracts/nft/neardev/: dev-account  dev-account.env
contracts/nft/src/: enumeration.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  token.rs
diagrams/: album_and_song_owner_relations.drawio  album_look.drawio  diagram.drawio  ownership.drawio  proper-rer.drawio  quickdesignfix.drawio  view_methods.drawio
docs/: document.txt  folder_structure.md  nep-171.md  stateDoc.txt  token_ipfs.md  upgrade.md
scripts/: app.js  app.test.js  app1.js  app2.js  app4.js  app5.js  config.js  execute.js  near-utils.js  snippet.js  test-utils.js
utils/: config.js  create_initial_accounts.js  deploy-market-upgrade.js  deploy-market.js  deploy-nft-upgrade.js  deploy-nft.js  near-utils.js  patch-config.js  patch-deploy-config.js  tutils.js
